changes to media query padding and margin sizes causing alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body,html{
     margin: 0;
     padding: 0;
     font-family: Oswald;
-    background-color: white;
+    background-color: black;
   
 }
 /* nav bar css  */
@@ -119,14 +119,16 @@ h2{
     box-sizing: border-box;
 }
 .weight p{
-
      text-align: left;
-     font-size: 20px;
+     font-size: 1rem;
      margin-right: 2rem;
      color: #f6be00;
      font-family: Oswald;
      padding: 0 auto;
-     margin: 0 auto;
+     margin: 0  auto;
+     
+
+     
      
     }
 
@@ -139,17 +141,16 @@ h2{
     width: 30rem;
     padding: 2%;
     box-sizing: border-box;
-    display: flex;
-
+  
 }
 .box p{
-     font-size: 2rem;
-     display: flex;
-     flex-direction: row;
-     color: #f6be00;
-     font-family: Oswald;
-     padding: 0 auto;
-     margin: 0  auto;
+    text-align: left;
+    font-size: 1rem;
+    margin-right: 2rem;
+    color: #f6be00;
+    font-family: Oswald;
+    padding: 0 auto;
+    margin: 0  auto;
 }
 
      
@@ -158,22 +159,23 @@ h2{
 }  
 
 .yoga img{
-    
     width: 30rem;
     padding: 2%;
     box-sizing: border-box;
+    
+    
 }
 
 .yoga p{
-    
     text-align: left;
-    font-size: 20px;
+    font-size: 1rem;
     margin-right: 2rem;
     color: #f6be00;
     font-family: Oswald;
     padding: 0 auto;
     margin: 0  auto;
-
+    
+   
 }
 
 
@@ -262,11 +264,13 @@ h2{
     
 }
 /* footer and social links css */
+
 .soc{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     position: sticky;
+    align-items: baseline;
 
    
    
@@ -292,18 +296,20 @@ h2{
 /* sign up page css */
 
 .sign-up{
-      width: 300px;
-      height: 500px;
+      width: 3rem;
+      height: 1rem;
       margin: auto;
       border-radius: 3px;
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
 
 }
 h4{
     text-align: center;
-    padding-top: 100px;
-    font-size: 60px;
+    font-size: 2rem;
     color: #f6be00;
     font-weight: bolder;
+    align-items: center;
 }
 
 form{
@@ -319,9 +325,7 @@ form label{
 }
 
 form input{
-    width: 100%;
-    height: 10px;
-    padding: 10px;
+    width: 40%;
     border:#f6be00 solid 10px;
     border-radius: 9px;
     
@@ -329,9 +333,11 @@ form input{
 }
 
 button{
-    width: 120%;
+   display: flex;
+   justify-content: center;
+   width: 40%;
     height: 55px;
-    margin-top: 20px;
+    margin-top: 15px;
     color: black;
     font-size: medium;
     background-color: #f6be00;
@@ -346,28 +352,27 @@ button{
 h5{
     text-align: center;
     font-family: Oswald;
-    font-size: 40px;
+    font-size: 3rem;
     font-weight: bolder;
     color: #f6be00;
    
    
 }
-
-.steps {
-    position: absolute;
-    top:40%;
-    color: #f6be00;
-}
-
-
 h6{
     font-family: Oswald;
-    font-size: 20px;
+    font-size: 3rem;
     font-weight: bolder;
     color: #f6be00;
     text-align: center;
-   
 }
+   
+
+.steps {
+    text-align: left;
+    color: #f6be00;
+}
+
+
 #types{
     font-size: 16px;
     font-family: Oswald;
@@ -438,12 +443,8 @@ h6{
     height: 500px;
     margin: auto;
     border-radius: 3px;
-
 }
 
-.fas{
-    display: none;
-}
 
 h2{
     font-size: 15px;
@@ -506,10 +507,15 @@ button{
 }
 .cross{
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 0 auto;
 }
 
 .cross img{
-    width: 18rem;
+    width: 17rem;
    
 
 }
@@ -517,58 +523,92 @@ button{
 .cross p {
     font-size: 1rem;
     justify-content: center;
+    flex-direction: column;
     font-family: Oswald;
     align-items: center;
-    margin: 0% auto;
+    margin: 0 auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
 
 }
 
+.weight{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 0 auto;
+}
 .weight img{
-    width: 12rem;
+    width: 17rem;
   
 }
    
 .weight p{
     font-size: 1rem;
+    justify-content: center;
+    flex-direction: column;
     font-family: Oswald;
     align-items: center;
+    margin: 0 auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    
+}
     
 
-}
-/*  
 .box{
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 0 auto;
 }
+
+
 .box img{
-    width: 12rem;
+    width: 17rem;
   
 }
 .box p{
     font-size: 1rem;
+    justify-content: center;
+    flex-direction: column;
     font-family: Oswald;
     align-items: center;
-   
-   
+    margin: 0 auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
 
 }
 
 .yoga{
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 0 auto;
 }
 .yoga img{
-    width: 12rem;
+    width: 17rem;
   
 
 }
 .yoga p{
     font-size: 1rem;
-    position: inherit;
+    justify-content: center;
+    flex-direction: column;
     font-family: Oswald;
     align-items: center;
-
+    margin: 0 auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
 
 }
-*/
+
 
 #plan h3 {
      font-size: 10px;
